<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="?attr/colorPrimaryDark"
        app:cardCornerRadius="4dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:padding="15dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:id="@+id/bid_amount_bids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/item_name"
                android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
                android:id="@+id/bid_date_bids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/starting_price"
                android:textAppearance="?attr/textAppearanceBody1" />


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_button_bids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/edit_button" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/withdraw_button_bids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/edit_button_bids"
                    android:layout_toLeftOf="@id/edit_button_bids"
                    android:text="@string/withdraw_button" />

        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
