<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loginPageBackgroundColor"
            tools:context=".view.LoginFragment">



        <!--<ImageView-->
                <!--android:layout_width="64dp"-->
                <!--android:layout_height="64dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginTop="48dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--app:srcCompat="@drawable/shr_logo"-->
                <!--android:contentDescription="@string/shr_logo_content_description"  />-->
        <TextView
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="64dp"
                android:gravity="center"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="16dp"
                android:text="@string/app_logo"
                android:textAllCaps="true"
                android:textSize="30sp" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:layout_marginTop="132dp"
            android:textColor="#FD9725"
            android:textAllCaps="true"
            android:textSize="35sp"
    />

        <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="210dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="260dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button_login" android:layout_marginTop="408dp"
            android:layout_marginLeft="236dp"
            android:layout_marginStart="236dp"/>


    <com.google.android.material.button.MaterialButton
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/button_cancel" android:layout_marginTop="408dp" android:layout_marginLeft="84dp"
            android:layout_marginStart="84dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/click_here"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="120dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
